--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mobile First Portfolio Project</title>
 
-<body>
-    
-</body>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+
+    <body>
+        <header>
+            <h1 class="title">Student Name</h1><!-- Could this be better suited inside the <nav>? -->
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <p class="intro-p">Hi! I'm a front-end developer who loves responsive design and CSS. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
+            <img src="images/responsive-layout-profile.png" alt="Profile Image" class="profile-img">
+        </header>
+        <main>
+            <section id="portfolio"><!-- All of the containers showing previews of each portfolio -->
+                <h2>Portfolio</h2>
+                <div class="portfolio-card">
+                    <h3>Marketing Page</h3>
+                    <img src="images/portfolio-1.png" alt="Preview Image of the Marketing Page">
+                    <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+                </div>
+                <div class="portfolio-card">
+                    <h3>Search Page</h3>
+                    <img src="images/portfolio-2.png" alt="Preview Image of the Search Page">
+                    <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                </div>
+                <div class="portfolio-card">
+                    <h3>Travel App</h3>
+                    <img src="images/portfolio-3.png" alt="Preview Image of the Travel App">
+                    <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                </div>
+                <div class="portfolio-card">
+                    <h3>Maps of Favorite Spots</h3>
+                    <img src="images/portfolio-4.png" alt="Preview Image of Maps of Favorite Spots Site">
+                    <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+                </div>
+                <div class="portfolio-card">
+                    <h3>Photo Gallery</h3>
+                    <img src="images/portfolio-5.png" alt="Preview Image of Photo Gallery Site">
+                    <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                </div>
+                <div class="portfolio-card">
+                    <h3>Calculator</h3>
+                    <img src="images/portfolio-6.png" alt="Preview Image of Calculator App">
+                    <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+                </div>
+            </section>
+            <section id="contact"><!-- Basic contact statement and information -->
+                <h2>Contact</h2>
+                <p>If you're interested in chatting or want more information about what I've been working on, I'd love to here from you!</p>
+                <ul>
+                    <li><span class="contact-opt-title">Phone</span>+1&nbsp;(111)555-1234</li>
+                    <li><span class="contact-opt-title">Email</span>email@yoursite.com</li>
+                </ul>
+            </section>
+            <footer><!-- Smaller Nav bar similar to the Nav at the very top of the page -->
+                <span class="title-footer">Student Name</span>
+                <span class="footer-mobile-only">Back to Top</span><!-- This only appears when screen size is less than 768px -->
+                <nav class="not-mobile nav-footer"><!-- This does not appear when screen size is less than 768px -->
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </footer>
+        </main>
+    </body>
 </html>
